Fix tags overlaping on mobile devices
Fixes #92

--- a/qa-theme/Donut-theme/less/components/tags.less
+++ b/qa-theme/Donut-theme/less/components/tags.less
@@ -14,6 +14,7 @@
 	&-tag-item {
 		display: inline-block;
 		margin-right: 5px;
+		padding: 6px 0;
 	}
 }
 
